--- a/appproject/codemon/templates/base.html
+++ b/appproject/codemon/templates/base.html
@@ -53,7 +53,7 @@
       top: 0;
       left: 0;
       right: 0;
-      z-index: 1000; /* 最前面に配置 */
+      z-index: 100; /* モーダルより下に配置 */
       padding: 10px 20px;
       margin-top: 50px; /* 外枠から離す */
       background: transparent;
