グループデザイン

--- a/appproject/accounts/templates/accounts/s_login.html
+++ b/appproject/accounts/templates/accounts/s_login.html
@@ -174,7 +174,9 @@
     {% if messages %}
     <div class="messages">
         {% for message in messages %}
-            <div class="message {{ message.tags }}">{{ message }}</div>
+            {% if message.tags == 'error' %}
+                <div class="message {{ message.tags }}">{{ message }}</div>
+            {% endif %}
         {% endfor %}
     </div>
     {% endif %}
